# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API Documentation",
-        "description": "API Usuários",
+        "description": "Documentação da API Usuários",
         "version": "1.0"
     },
     "servers": [
@@ -17,49 +17,21 @@
                     "Usuários"
                 ],
                 "summary": "Listar todos os usuários",
-                "description": "Retorna a lista de usuários",
+                "description": "Retorna a lista de usuários.",
                 "operationId": "600ec787a82d08ec298424fd97dd33d9",
                 "responses": {
                     "200": {
                         "description": "OK"
                     }
                 }
-            }
-        },
-        "api/usuario/{cpf}": {
-            "get": {
-                "tags": [
-                    "Usuários"
-                ],
-                "summary": "Buscar um usuário pelo CPF",
-                "operationId": "a1d534d525c2b61beeadab9881321e04",
-                "parameters": [
-                    {
-                        "name": "cpf",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Usuário encontrado"
-                    },
-                    "404": {
-                        "description": "Usuário não encontrado"
-                    }
-                }
-            }
-        },
-        "api/usuario": {
+            },
             "post": {
                 "tags": [
                     "Usuários"
                 ],
                 "summary": "Cadastrar um novo usuário",
-                "operationId": "e15ed227f3197435ee2348cff707e2db",
+                "description": "Realiza o cadastro de um novo usuário.",
+                "operationId": "12af6b3d715bf3099de301b50a13d0da",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -72,14 +44,17 @@
                                 ],
                                 "properties": {
                                     "cpf": {
-                                        "type": "integer"
+                                        "type": "unsignedBigInteger",
+                                        "example": 12345678900
                                     },
                                     "nome": {
-                                        "type": "string"
+                                        "type": "string",
+                                        "example": "Name"
                                     },
                                     "data_nascimento": {
                                         "type": "string",
-                                        "format": "date"
+                                        "format": "date",
+                                        "example": "2000-01-01"
                                     }
                                 },
                                 "type": "object"
@@ -93,6 +68,36 @@
                     },
                     "409": {
                         "description": "Não foi possível cadastrar o usuário"
+                    }
+                }
+            }
+        },
+        "/api/usuarios/{cpf}": {
+            "get": {
+                "tags": [
+                    "Usuários"
+                ],
+                "summary": "Buscar um usuário pelo CPF",
+                "description": "Retorna as informações de um usuário baseado no CPF fornecido.",
+                "operationId": "83bf07375fb378994bdf4865c788a481",
+                "parameters": [
+                    {
+                        "name": "cpf",
+                        "in": "path",
+                        "description": "CPF do usuário a ser buscado",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 12345678900
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Usuário encontrado"
+                    },
+                    "404": {
+                        "description": "Usuário não encontrado"
                     }
                 }
             }
